--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,12 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist/portfolio"
-      }
+      "config": { "distDir": "dist/portfolio" }
     }
   ],
+
   "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "\\/(.*)", "dest": "\/$1" }
   ]
+
 }
