--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,10 @@
   ],
 
   "routes": [
-    { "src": "\\/(.*)", "dest": "\/$1" }
+    {
+      "src": "/.*",
+      "dest": "/index.html"
+    }
   ]
 
 }
